...
        },
      },
    ]);
  };

  return (
    <View style={styles.outerContainer} testID="settings-screen">
      <ScrollView
        style={styles.container}
        contentContainerStyle={styles.content}
        refreshControl={
          <RefreshControl
            refreshing={isRefetching}
...
